--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "git": {
       "requireCleanWorkingDir": false
     }
+  },
+  "dependencies": {
+    "@nestjs/typeorm": "^11.0.0",
+    "mysql2": "^3.14.1",
+    "typeorm": "^0.3.22"
   }
 }
