--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "forum_anonyme",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "scripts": {
     "release:patch": "release-it patch --ci",
     "release:minor": "release-it minor --ci",
@@ -16,5 +16,10 @@
     "git": {
       "requireCleanWorkingDir": false
     }
+  },
+  "dependencies": {
+    "@nestjs/typeorm": "^11.0.0",
+    "mysql2": "^3.14.1",
+    "typeorm": "^0.3.22"
   }
 }
