--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "scripts": {
     "release:patch": "release-it patch --ci",
     "release:minor": "release-it minor --ci",
-    "release:major": "release-it major --ci"
+    "release:major": "release-it major --ci",
+    "test:e2e": "npx playwright test --config=e2e/playwright.config.ts"
   },
   "devDependencies": {
-    "release-it": "^18.1.2"
+    "playwright": "^1.52.0",
+    "release-it": "^18.1.2",
+    "wait-on": "^8.0.3"
   },
   "release-it": {
     "npm": {
