--- a/.github/workflows/pr-to-main.yml
+++ b/.github/workflows/pr-to-main.yml
@@ -41,3 +41,42 @@ jobs:
       - name: Version bump
         if: ${{ env.INCREMENT_VERSION != '' }}
         run: npm run release:$INCREMENT_VERSION
+
+  build:
+    needs: release
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Get short commit SHA
+        uses: benjlevesque/short-sha@v3.0
+        id: short-sha
+        with:
+          length: 6
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and tag API image
+        run: docker build -t ghcr.io/${{ github.repository_owner }}/api:${{ steps.short-sha.outputs.sha }} ./api
+
+      - name: Build and tag Sender image
+        run: docker build -t ghcr.io/${{ github.repository_owner }}/sender:${{ steps.short-sha.outputs.sha }} ./sender
+
+      - name: Build and tag Thread image
+        run: docker build -t ghcr.io/${{ github.repository_owner }}/thread:${{ steps.short-sha.outputs.sha }} ./thread
+
+      - name: Push API image
+        run: docker push ghcr.io/${{ github.repository_owner }}/api:${{ steps.short-sha.outputs.sha }}
+
+      - name: Push Sender image
+        run: docker push ghcr.io/${{ github.repository_owner }}/sender:${{ steps.short-sha.outputs.sha }}
+
+      - name: Push Thread image
+        run: docker push ghcr.io/${{ github.repository_owner }}/thread:${{ steps.short-sha.outputs.sha }}
