--- a/.github/workflows/pr-to-main.yml
+++ b/.github/workflows/pr-to-main.yml
@@ -11,10 +11,59 @@ permissions:
   contents: write
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        service: [api, thread, sender]
+        include:
+          - service: api
+            context: ./api
+          - service: thread
+            context: ./thread
+          - service: sender
+            context: ./sender
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Get short commit SHA
+        uses: benjlevesque/short-sha@v3.0
+        id: short-sha
+        with:
+          length: 6
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Convert repository name to lowercase
+        id: repo_name
+        run: echo "REPO_NAME=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ${{ matrix.context }}
+          push: true
+          tags: ghcr.io/${{ steps.repo_name.outputs.REPO_NAME }}/${{ matrix.service }}:${{ steps.short-sha.outputs.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
   release:
+    needs: build
     env:
       INCREMENT_VERSION: ""
     runs-on: ubuntu-latest
+
     steps:
       - name: Set environment variable conditionally
         run: |
@@ -32,11 +81,6 @@ jobs:
 
       - name: Config Git
         uses: fregante/setup-git-user@v2
-
-      - name: Switch to main branch
-        run: |
-          git fetch origin
-          git switch main
 
       - name: Version bump
         if: ${{ env.INCREMENT_VERSION != '' }}
