build: add changelog to release-it

--- a/.github/workflows/pr-to-main.yml
+++ b/.github/workflows/pr-to-main.yml
@@ -1,5 +1,5 @@
-name: Pull Request to main
-run-name: Pull Request to main
+name: Pull Request to Main
+run-name: Pull Request to Main
 
 on:
   pull_request:
