--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "forum_anonyme",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "release:patch": "release-it patch --ci",
     "release:minor": "release-it minor --ci",
@@ -23,11 +23,7 @@
       "publish": false
     },
     "git": {
-      "requireCleanWorkingDir": false,
-      "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s"
-    },
-    "hooks": {
-      "after:bump": "npx conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
+      "requireCleanWorkingDir": false
     }
   }
 }
